objects/GEMS_Process_Metadata__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Submission_Sub_Type__c</fullName>
        <label>Account Submission Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Submission_Type__c</fullName>
        <label>Account Submission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Eligibility_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Eligibility Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_ID_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create ID Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Manaual_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Manaual Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Membership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Product__c</fullName>
        <label>GEMS Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GEMS Process Metadata</label>
    <pluralLabel>GEMS Process Metadatas</pluralLabel>
</CustomObject>